1998-08-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib.in (INCLUDES): Add -I.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (install-data-local): Use INSTALL_DATA instead.
	Do each file separately for install-sh case.

1998-08-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (LDFLAGS): Substitute at the end, but leave
	commented.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (APPEXE): Move up with other substitutions.

1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib.in, Makefile.appl.in: Substitute CPPFLAGS and
	add to compilation rule.
	(all): Depend on symlink.
	(symlink): Create link to current directory of LIBNAME.

	* Makefile.appl.in (datadir): Substitute.
	(swarmdatadir, swarmsysconfdir): Appends /swarm.
	(install-config): Use swarmsysconfdir instead.
	(install-data): New rule.
	(install): Depend on install-data.
	(APPEXE): APPLICATION + exe suffix, if any.
	Change uses of APPLICATION as a program to APPEXE.

1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (sysconfdir): Substitute.
	(INSTALL_DATA): Substitute INSTALL_DATA from SWARM_INSTALL_DATA_.
	(install-config): Add.
	(install): Depend on install-config.

1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib.in (INSTALL, INSTALL_DATA): Substitute from
	INSTALL and SWARM_INSTALL_DATA_.
	(all): Don't install by default.
	(install-headers, install-lib): Update to use INSTALL_DATA.

	* Makefile.appl.in (INSTALL_PROGRAM): Set INSTALL_PROGRAM to
	@SWARM_INSTALL_PROGRAM@.
	(INSTALL): Substitute.

1998-08-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* config.swarm.in (swarm_prefix, swarm_exec_prefix, swarm_libdir):
	Assigned from new substituted variables of same name.
	Remove "config_" throughout.

	* Makefile.am (install-data-local): Use mkinstalldirs instead of
	test + mkdir.
