@@ -45,9 +45,10 @@ GUILIBS = @GUILIBS@
 
 APPEXE = $(APPLICATION)@EXESUFFIX@
 
-LDFLAGS = -L$(libdir) @RPATH@$(libdir) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS) # @EXTRALDFLAGS@ 
-#LINK = libtool --mode link $(CC) $(CFLAGS) $(LDFLAGS) -o $@
-LINK = $(CC) $(CFLAGS) $(LDFLAGS) -o $@
+#LDFLAGS = -L$(libdir) @RPATH@$(libdir) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS) # @EXTRALDFLAGS@ 
+LDFLAGS = -L$(libdir) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS) # @EXTRALDFLAGS@ 
+LINK = $(bindir)/libtool --mode link $(CC) $(CFLAGS) $(LDFLAGS) -o $@
+#LINK = $(CC) $(CFLAGS) $(LDFLAGS) -o $@
 
 SYSLIBS = $(BLTLIB) $(TKLIB) $(TCLLIB) $(PNGLIB) $(ZLIBLIB) $(FFILIB) $(GUILIBS) -lm
 
